fix: 컬렉션의 of 메소드가 java8에서 작동이 안되는 문제점 해결하기 위해 Arrays.asList 로 수정